# rolldown

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  rustfmt.toml  tsconfig.json  tsconfig.project.json
crates/rolldown/: Cargo.toml
crates/rolldown/benches/: threejs.rs
crates/rolldown/examples/: basic.rs  build_rolldown_core.rs  threejs10x.rs
crates/rolldown/src/: lib.rs  rolldown_build.rs
crates/rolldown/src/input_options/: mod.rs
crates/rolldown/src/input_options/builtins/: mod.rs  node_resolve.rs
crates/rolldown/src/output_options/: export_mode.rs  mod.rs
crates/rolldown/tests/common/: mod.rs
crates/rolldown/tests/esbuild/default/: bundler_default_test.go
crates/rolldown/tests/esbuild/default/.dot_import/: index.js  main.js
crates/rolldown/tests/esbuild/default/.export_infinite_cycle2/: foo.js  main.js
crates/rolldown/tests/esbuild/default/avoid_tdz/: output.snap
crates/rolldown/tests/esbuild/default/export_chain/: output.snap
crates/rolldown/tests/esbuild/default/export_forms_es6/: main.js  output.snap
crates/rolldown/tests/esbuild/default/export_infinite_cycle1/: main.js  test.config.json
crates/rolldown/tests/esbuild/default/export_missing_es6/: bar.js  foo.js  test.config.json
crates/rolldown/tests/esbuild/default/import_missing_unused_es6/: main.js  test.config.json
crates/rolldown/tests/esbuild/default/keep_names_class_static_name/: main.js  output.snap  test.config.json
crates/rolldown/tests/esbuild/default/simple_es6/: output.snap
crates/rolldown/tests/esbuild/import_star/: bundler_importstar_test.go
crates/rolldown/tests/esbuild/import_star/.re_export_other_file_import_export_self_as_namespace_es6/: output.snap
crates/rolldown/tests/esbuild/import_star/export_self_as_namespace_es6/: output.snap
crates/rolldown/tests/esbuild/import_star/export_self_common_js/: output.snap
crates/rolldown/tests/esbuild/import_star/export_self_es6/: output.snap
crates/rolldown/tests/esbuild/import_star/export_star_as_unused/: output.snap
crates/rolldown/tests/esbuild/splitting/.missing_lazy_export/: b.js  (+1 more)
crates/rolldown/tests/esbuild/ts/: test.go
crates/rolldown/tests/fixtures/empty_entry/: test.config.json
crates/rolldown/tests/fixtures/handle_import_from_indirect_re_export_in_deps/: a-1.js  b-1.js
crates/rolldown/tests/fixtures/re_export_all_from_external/: test.config.json
crates/rolldown/tests/fixtures/re_export_all_from_external_indirect/: output.snap
crates/rolldown/tests/fixtures/re_export_all_from_shared/: output.snap
crates/rolldown_ast_template/: Cargo.toml
crates/rolldown_ast_template/src/: lib.rs
crates/rolldown_common/: Cargo.toml
crates/rolldown_common/src/: lib.rs  loader.rs  symbol.rs  union_find.rs
crates/rolldown_compiler/: Cargo.toml
crates/rolldown_compiler/src/: lib.rs
crates/rolldown_core/: Cargo.toml
crates/rolldown_core/benches/: threejs.rs
crates/rolldown_core/examples/: basic.rs  build_rolldown_core.rs  rolldown_core.rs
crates/rolldown_core/src/: bundle.rs  bundler.rs  chunk.rs  chunk_graph.rs  code_splitter.rs  external_module.rs  graph.rs  lib.rs  norm_or_ext.rs  normal_module.rs
crates/rolldown_core/src/module_loader/: mod.rs  module_task.rs
crates/rolldown_core/src/options/: input_options.rs  output_options.rs
crates/rolldown_core/src/options/input_options/: input_item.rs  mod.rs
crates/rolldown_core/src/options/output_options/: export_mode.rs  mod.rs
crates/rolldown_core/src/plugin_driver/: build_plugin_driver.rs  mod.rs
crates/rolldown_core/src/treeshake/: graph.rs  mod.rs  statement_part.rs
crates/rolldown_core/src/utils/: mod.rs  name_helpers.rs  preset_of_used_names.rs  resolve_id.rs
crates/rolldown_core/tests/: esbuild.rs  mod.rs  rollup.rs
crates/rolldown_core/tests/common/: mod.rs
crates/rolldown_core/tests/esbuild/import_star/: bundler_importstar_test.go
crates/rolldown_core/tests/esbuild/ts/: test.go
crates/rolldown_core/tests/fixtures/cyclic_self_re_export/: main.js  output.snap
crates/rolldown_core/tests/fixtures/cyclic_self_re_export_star/: main.js  output.snap
crates/rolldown_core/tests/fixtures/empty_entry/: test.config.json
crates/rolldown_core/tests/fixtures/handle_import_from_indirect_re_export_in_deps/: a.js  b.js  output.snap  test.config.json
crates/rolldown_core/tests/fixtures/missing_export/: main.js  test.config.json
crates/rolldown_core/tests/fixtures/re_export_all_from_external/: output.snap  test.config.json
crates/rolldown_core/tests/fixtures/re_export_all_from_external_indirect/: output.snap
crates/rolldown_core/tests/fixtures/re_export_all_from_shared/: output.snap
crates/rolldown_error/: Cargo.toml
crates/rolldown_error/src/: error.rs  error_kind.rs  errors.rs  lib.rs  utils.rs
crates/rolldown_error/src/error_kind/: error_code.rs  mod.rs
crates/rolldown_node_binding/: Cargo.toml  index.d.ts  index.js  package.json
crates/rolldown_node_binding/src/: bundler.rs  js_build_plugin.rs  js_callbacks.rs  lib.rs
crates/rolldown_node_binding/src/options/input_options/: external.rs  mod.rs
crates/rolldown_node_binding/src/options/output_options/: mod.rs
crates/rolldown_node_binding/src/utils/: js_callback.rs  mod.rs  napi_error_ext.rs
crates/rolldown_plugin/: Cargo.toml
crates/rolldown_plugin/src/: args.rs  lib.rs  plugin.rs
crates/rolldown_resolver/: Cargo.toml
crates/rolldown_resolver/src/: lib.rs
crates/rolldown_swc_utils/: Cargo.toml
crates/rolldown_swc_utils/src/: lib.rs
crates/rolldown_swc_visitors/: Cargo.toml
crates/rolldown_swc_visitors/src/: export_mode_shimer.rs  finalize.rs  lib.rs  remove_export_and_import.rs  resolve.rs  scan.rs  to_cjs.rs  treeshake.rs  ts_to_js.rs
crates/rolldown_test_utils/: Cargo.toml  test.config.scheme.json
crates/rolldown_test_utils/src/: lib.rs  tester.rs
crates/rolldown_test_utils/src/test_config/: input_options.rs  mod.rs  output_options.rs
crates/rolldown_tracing/: Cargo.toml
crates/rolldown_tracing/src/: lib.rs
(+265 files in other folders)
