[package]
name = "rolldown_ast_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = { workspace = true, features = [
    "ecma_ast",
    "common",
    "common_concurrent",
    "ecma_utils",
] }