[package]
description = "rolldown_ast_template"
edition     = "2021"
license     = "MIT"
name        = "rolldown_ast_template"
version     = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = { workspace = true, features = [
  "ecma_ast",
  "common",
  "common_concurrent",
  "ecma_utils",
] }
