[package]
description = "rolldown_common"
edition     = "2021"
license     = "MIT"
name        = "rolldown_common"
version     = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ena            = "0.14.0"
hashlink       = { workspace = true }
rolldown_error = { path = "../rolldown_error" }
rustc-hash     = { workspace = true }
scoped-tls     = { workspace = true }
swc_core       = { workspace = true, features = ["ecma_ast", "common"] }
tracing        = { workspace = true }
