[package]
name = "rolldown_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rolldown_error = { path = "../rolldown_error" }
swc_core = { workspace = true, features = [
    "common",
    "common_tty",
    "common_concurrent",
    "ecma_parser",
    "ecma_ast",
    "ecma_codegen",
    "ecma_visit",
] }
anyhow = { workspace = true }
sugar_path = { workspace = true }
