[package]
name = "rolldown_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rolldown_common = { path = "../rolldown_common" }
rolldown_swc_visitors = { path = "../rolldown_swc_visitors" }
rolldown_compiler = { path = "../rolldown_compiler" }
rolldown_resolver = { path = "../rolldown_resolver" }
rolldown_error = { path = "../rolldown_error" }
rolldown_runtime_helpers = { path = "../rolldown_runtime_helpers" }
rolldown_ast_template = { path = "../rolldown_ast_template" }
rolldown_plugin = { path = "../rolldown_plugin" }
rolldown_tracing = { path = "../rolldown_tracing" }
tokio = { workspace = true, features = ["full"] }
swc_core = { workspace = true, features = [
    "ecma_ast",
    "common",
    "common_concurrent",
    "ecma_utils",
] }
swc_node_comments = { workspace = true }
derivative = { workspace = true }
once_cell = { workspace = true }
hashlink = { workspace = true }
sugar_path = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
futures = {  workspace = true }
phf = { workspace = true , features = ["macros"] }
regex = "1.5.4"

[dev_dependencies]
rolldown_test_utils = { path = "../rolldown_test_utils" }
insta = { workspace = true }
testing_macros = { workspace = true }
criterion = "0.4.0"

[[bench]]
name = "threejs"
harness = false