[package]
description = "rolldown_core"
edition     = "2021"
license     = "MIT"
name        = "rolldown_core"
version     = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = { workspace = true }
futures = { workspace = true }
hashlink = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
phf = { workspace = true, features = ["macros"] }
rayon = { workspace = true }
regex = "1.5.4"
rolldown_ast_template = { version = "0.0.1", path = "../rolldown_ast_template" }
rolldown_common = { version = "0.0.1", path = "../rolldown_common" }
rolldown_compiler = { version = "0.0.1", path = "../rolldown_compiler" }
rolldown_error = { version = "0.0.1", path = "../rolldown_error" }
rolldown_plugin = { version = "0.0.1", path = "../rolldown_plugin" }
rolldown_resolver = { version = "0.0.1", path = "../rolldown_resolver" }
rolldown_runtime_helpers = { version = "0.0.1", path = "../rolldown_runtime_helpers" }
rolldown_swc_visitors = { version = "0.0.1", path = "../rolldown_swc_visitors" }
rolldown_tracing = { version = "0.0.1", path = "../rolldown_tracing" }
rustc-hash = { workspace = true }
sugar_path = { workspace = true }
swc_core = { workspace = true, features = [
  "ecma_ast",
  "common",
  "common_concurrent",
  "ecma_utils",
] }
swc_node_comments = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev_dependencies]
criterion           = "0.4.0"
insta               = { workspace = true }
rolldown_test_utils = { path = "../rolldown_test_utils" }
testing_macros      = { workspace = true }

[[bench]]
harness = false
name    = "threejs"
