[package]
name = "rolldown_error"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "rolldown_error"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugar_path = { workspace = true }
swc_core = { workspace = true, features = ["ecma_parser"] }
anyhow = "1.0.66"
ansi_term = "0.12.1"