[package]
name = "rolldown_node_binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rolldown_core = { path = "../rolldown_core" }
rolldown_plugin = { path = "../rolldown_plugin" }
rolldown_tracing = { path = "../rolldown_tracing" }
async-trait = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde = { version = "1", features = ["derive"] }
napi              = { version = "2.11.1", features = ["full"]}
napi-derive       = { version = "2.11.0" }


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true