[package]
edition = "2021"
license = "MIT"
name    = "rolldown_node_binding"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait                  = { workspace = true }
derivative                   = { workspace = true }
futures                      = { workspace = true }
itertools                    = { workspace = true }
napi                         = { version = "2.11.1", features = ["full"] }
napi-derive                  = { version = "2.11.0" }
rolldown_core                = { path = "../rolldown_core" }
rolldown_plugin              = { path = "../rolldown_plugin" }
rolldown_plugin_node_resolve = { path = "../rolldown_plugin_node_resolve" }
rolldown_tracing             = { path = "../rolldown_tracing" }
rustc-hash                   = { workspace = true }
scoped-tls                   = { workspace = true }
serde                        = { version = "1", features = ["derive"] }
tracing                      = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[build-dependencies]
napi-build = "2"
