[package]
description = "rolldown_plugin"
edition     = "2021"
license     = "MIT"
name        = "rolldown_plugin"
version     = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow          = "1"
async-trait     = { workspace = true }
rolldown_common = { version = "0.0.1", path = "../rolldown_common" }
rolldown_error  = { version = "0.0.1", path = "../rolldown_error" }
