[package]
name = "rolldown_swc_visitors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rolldown_common = { path = "../rolldown_common" }
rolldown_swc_utils = { path = "../rolldown_swc_utils" }
rolldown_error = { path = "../rolldown_error" }
hashlink = { workspace = true }
rustc-hash = { workspace = true }
swc_core = { workspace = true, features = [
    "ecma_visit",
    "ecma_ast",
    "ecma_minifier",
    "common",
    "common_concurrent",
    "ecma_transforms_optimization",
    "ecma_transforms_module",
    "ecma_utils",
] }
tracing = { workspace = true }