[package]
name = "rolldown_swc_visitors"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "rolldown_swc_visitors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rolldown_common = { version = "0.0.1", path = "../rolldown_common" }
rolldown_swc_utils = { version = "0.0.1", path = "../rolldown_swc_utils" }
rolldown_error = { version = "0.0.1", path = "../rolldown_error" }
hashlink = { workspace = true }
rustc-hash = { workspace = true }
swc_core = { workspace = true, features = [
    "ecma_visit",
    "ecma_ast",
    "ecma_minifier",
    "common",
    "common_concurrent",
    "ecma_transforms_optimization",
    "ecma_transforms_module",
    "ecma_utils",
] }
tracing = { workspace = true }
