[package]
description = "rolldown_swc_visitors"
edition     = "2021"
license     = "MIT"
name        = "rolldown_swc_visitors"
version     = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashlink = { workspace = true }
rolldown_common = { version = "0.0.1", path = "../rolldown_common" }
rolldown_error = { version = "0.0.1", path = "../rolldown_error" }
rolldown_swc_utils = { version = "0.0.1", path = "../rolldown_swc_utils" }
rustc-hash = { workspace = true }
swc_core = { workspace = true, features = [
  "ecma_visit",
  "ecma_ast",
  "ecma_minifier",
  "common",
  "common_concurrent",
  "ecma_transforms_optimization",
  "ecma_transforms_module",
  "ecma_transforms_typescript",
  "ecma_transforms_proposal",
  "ecma_utils",
] }
tracing = { workspace = true }
