[package]
name = "rolldown_test_utils"
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rolldown_core = { path = "../rolldown_core"}
futures = { workspace = true }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }