[package]
edition = "2021"
license = "MIT"
name    = "rolldown_test_utils"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
name  = "gen_test_config_schema"
path  = "./bin/gen_test_config_schema.rs"
test  = false

[dependencies]
dashmap       = { workspace = true }
futures       = { workspace = true }
hashlink      = { workspace = true, features = ["serde_impl"] }
rolldown_core = { path = "../rolldown_core" }
schemars      = "0.8.11"
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
