[package]
name = "rolldown_tracing"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "rolldown_tracing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}