[package]
description = "rolldown_tracing"
edition     = "2021"
license     = "MIT"
name        = "rolldown_tracing"
version     = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
